#
# $Id: Makefile.am,v 1.1 2002/01/17 11:26:14 uehira Exp $
#
#  Makefile.am in etc subdirectory.
#

EXTRA_DIST = 991109.064607 991109.064607.ch README channels.tbl events.prm \
	filter.prm labels.tbl map.dat map.japan.km nxtzones.tbl pmon.prm \
	struct.tbl win.conf win.prm win.prm.auto winap.prm wtape.prm zones.tbl
